Made it so external libraries are no longer needed